# appfre

./: CMakeLists.txt  README.md  package.xml
GP Regression/: GP Regression Final.py  SkLearnTutorial - background test.ipynb  SkLearnTutorial - continuous test.ipynb  SkLearnTutorial.ipynb  greyscale_costmap,c+5,ls=1,n=1.2.pgm
GP Regression/GP Regression Results/: greyscale_costmap,c+0.6,ls=0.001,n=0.05.pgm  greyscale_costmap,c+0.6,ls=0.001,n=0.1.pgm  (+53 more)
config/: mapper_params_online_async.yaml  nav2_config.rviz  nav2_params.yaml
description/: gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  materials.xacro  robot.urdf.xacro  robot_core.xacro
launch/: launch_nav2.launch.py  launch_robot.launch.py  rsp.launch.py
maps/: Radiation_5s_Data_2024-05-29_13-10-06.759324.pgm  Radiation_5s_Data_2024-05-29_13-10-06.759324.yaml  Radiation_5s_Data_2024-05-29_13:10:06.759324.yaml  Radiation_5s_Data_no_obs_2024-05-29_13-30-43.963016.yaml  Radiation_5s_Data_no_obs_2024-05-29_13:30:43.963016.pgm  Radiation_5s_Data_no_obs_2024-05-29_13:30:43.963016.yaml  obs_costmap.pgm  obs_costmap.yaml
msg/: CountRate.msg
notes/: docker_commands.txt  repeated_commands.md
rad_data/: Background_10s_Data_2024-05-29_10-49-17.686739.txt  Radiation_5s_Data_2024-05-29_13:10:06.759324.txt
src/: Astar_Radiation_PathPlanning.py  Geiger-Toggle-Send.py  Geiger.py  Geiger_Socket_Send.py  Geiger_receive.py  Geiger_socket_receive.py  IMU-test.py  Socket_Client.py  Socket_Server_Test.py  explore.py
worlds/: obstacles.world  room.world  room_with_obstacles.world  small_gap.world
(+18 files in other folders)
